--- a/Script1/QC_metrics_for_Peptide_Reports.html
+++ b/Script1/QC_metrics_for_Peptide_Reports.html
@@ -116,7 +116,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore"><strong>QC metrics Peptide Reports</strong></h1>
-<h4 class="date"><em>26 octubre, 2016</em></h4>
+<h4 class="date"><em>06 marzo, 2017</em></h4>
 
 </div>
 
@@ -225,7 +225,7 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
-<p>The number of spectra are the same.</p>
+<p>The number of spectras are the same.</p>
 </div>
 <div id="new-clusters" class="section level3">
 <h3><strong>New clusters</strong></h3>
